# librtc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.py
examples/: hello_world_test.cpp
include/librtc/: data_channel.hpp  peer_connection.hpp
include/librtc/errors/: data_channel_error.hpp  peer_connection_error.hpp
include/librtc/utils/: async_bridge.hpp  event.hpp  expected.hpp
src/: peer_connection.cpp
src/impl/: data_channel_impl.cpp  data_channel_impl.hpp  peer_connection_impl.cpp  peer_connection_impl.hpp
src/impl/proxy/: data_channel_observer_proxy.hpp  peer_connection_observer_proxy.hpp  session_description_proxies.hpp
